package telegram.pms.com.example.demo.messagelog;

// defines possible result from Telegram send message
public enum MessageStatus {
    SENT,
    FAILED,
}